--- a/it-academy-fe/index.html
+++ b/it-academy-fe/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Desk booking app</title>
-  <base href="/">
+  <base href="./index.html">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,6 +10,6 @@
 <style>.mat-typography{font:400 14px/20px Roboto,Helvetica Neue,sans-serif;letter-spacing:normal}html,body{height:100%}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}</style><link rel="stylesheet" href="styles.08401ab360dc7c00.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.08401ab360dc7c00.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.7822fd5e668ed17c.js" type="module"></script><script src="polyfills.3f8e6c6953050494.js" type="module"></script><script src="main.4033bfa97d38da9d.js" type="module"></script>
+<script src="runtime.7822fd5e668ed17c.js" type="module"></script><script src="polyfills.3f8e6c6953050494.js" type="module"></script><script src="main.6c944513df23d477.js" type="module"></script>
 
 </body></html>
